kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: buildpack-example
  name: buildpack-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildpack-example
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: buildpack-example
    spec:
      replicas: 2
      containers:
      - image: k3d-myregistry.localhost:12345/com.boxboat.groovy-spring-app:local
        name: groovy-spring-app
        ports:
        - name: groovy-port
          containerPort: 8000
      - image: k3d-myregistry.localhost:12345/com.boxboat.gradle-spring-app:local
        name: gradle-spring-app
        ports:
        - name: gradle-port
          containerPort: 8000
      - image: k3d-myregistry.localhost:12345/com.boxboat.maven-spring-app:local
        name: maven-spring-app
        ports:
        - name: maven-port
          containerPort: 8000
      - image: k3d-myregistry.localhost:12345/com.boxboat.fastapi-app:local
        name: fastapi-app
        ports:
        - name: fastapi-port
          containerPort: 8000
status: {}
