kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: buildpack-example
  name: buildpack-example-svc
spec:
  type: ClusterIP
  ports:
  - name: groovy-spring-app
    port: 4000
    protocol: TCP
    targetPort: groovy-port
  - name: gradle-spring-app
    port: 4010
    protocol: TCP
    targetPort: gradle-port
  - name: maven-spring-app
    port: 4020
    protocol: TCP
    targetPort: maven-port
  - name: fastapi-app
    port: 4030
    protocol: TCP
    targetPort: fastapi-port
  selector:
    app: buildpack-example
