kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildpack-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /groovy
          pathType: Prefix
          backend:
            service:
              name: buildpack-example-svc
              port:
                number: 4000
        - path: /java/gradle
          pathType: Prefix
          backend:
            service:
              name: buildpack-example-svc
              port:
                number: 4010
        - path: /java/maven
          pathType: Prefix
          backend:
            service:
              name: buildpack-example-svc
              port:
                number: 4020
        - path: /python
          pathType: Prefix
          backend:
            service:
              name: buildpack-example-svc
              port:
                number: 4030
